--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 
 dash==1.8.0
 dash-core-components==1.7.0
+dash-bootstrap-components 
 dash-html-components==1.0.2
 dash-renderer==1.2.3
 dash-table==4.6.0
